--- a/index.css
+++ b/index.css
@@ -1,9 +1,12 @@
 body{
-    background: url("https://pixabay.com/get/54e9d2474c56ae14f6d1867dda353678153bd9e75658724f_1920.jpg");
+    background: url("./alexander-kaunas-kTCZuDtYgzc-unsplash.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
     text-align: center;
     background-size: cover;
     overflow-x: hidden;
     overflow-y: hidden;
+    height: 100vh;
 }
 
 .outerwrap{
