--- a/instructions.css
+++ b/instructions.css
@@ -1,7 +1,8 @@
 body {
-    background: url("https://pixabay.com/get/54e9d2474c56ae14f6d1867dda353678153bd9e75658724f_1920.jpg");
+    background: url("./alexander-kaunas-kTCZuDtYgzc-unsplash.jpg");
     text-align: center;
     background-size: cover;
+    background-position: center;
 }
 .outerWrap{
     padding: 40px;
